test/type-checking/good/ExplicitCast.cc
double foo(int x, double d)
{
  return ((double)x) * d;
}
