test/type-checking/bad/VarMultipleDecl.cc
int main() {
  int x;
  string x = "foo";
  return 0;
}
